[project]
name = "mcp_gemini"
version = "0.1.0"
description = "Example of MCP server and client using Gemini"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arxiv>=2.2.0",
    "google-genai==1.16.1",
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
    "nest-asyncio>=1.6.0",
    "requests>=2.32.3",
]
